--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ properties.load(project.rootProject.file('local.properties').newDataInputStream(
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.camnter.easygank"
@@ -78,25 +78,6 @@ android {
 
     // 签名配置
     signingConfigs {
-        debug {
-            storeFile file("../easygank.jks")
-            storePassword properties.getProperty("storePassword")
-            keyAlias properties.getProperty("keyAlias")
-            keyPassword properties.getProperty("keyPassword")
-            println("====== signingConfigs.debug ======")
-        }
-
-        release {
-            storeFile file("../easygank.jks")
-            storePassword properties.getProperty("storePassword")
-            keyAlias properties.hasProperty('keyAlias')
-            keyPassword properties.hasProperty('keyPassword')
-            println("====== signingConfigs.release ======")
-            println("properties.getProperty(\"storePassword\") = " + properties.getProperty("storePassword"))
-            println("properties.getProperty(\"keyAlias\") = " + properties.getProperty("keyAlias"))
-            println("properties.getProperty(\"keyPassword\") = " + properties.getProperty("keyPassword"))
-
-        }
     }
 
     buildTypes {
@@ -147,11 +128,20 @@ android {
 //                                    UMENG_APPKEY: "569902f967e58e5e760003e1",
 //                                    DEBUG         : "T"]
 //        }
-        DebugTest {
+        hongTest {
             applicationId "com.camnter.easygank.test"
             manifestPlaceholders = [CHANNEL_NAME: "DebugTest",
                                     UMENG_APPKEY: "569902f967e58e5e760003e1",
                                     DEBUG       : "F"]
+
+            buildConfigField "boolean","SHOULD_LOG","true"
+        }
+
+        production{
+
+            buildConfigField "boolean","SHOULD_LOG","false"
+            applicationId "com.camnter.easygank"
+
         }
     }
 
@@ -163,44 +153,34 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
-
     // CaMnter ( Yuanyu Zhang https://github.com/CaMnter )
     compile 'com.camnter.easyrecyclerview:easyrecyclerview:1.1.0'
-
     // Google
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:multidex:1.0.1'
-
     // retrofit
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.okhttp:okhttp:2.7.0'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
-
     // ReactiveX
     compile 'io.reactivex:rxjava:1.0.16'
     compile 'io.reactivex:rxandroid:1.0.1'
-
     // butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
-
     // dagger
     apt 'com.google.dagger:dagger-compiler:2.0'
     compile 'com.google.dagger:dagger:2.0'
-
     // Glide
     compile 'com.github.bumptech.glide:glide:3.6.1'
-
     // Reservoir
     compile 'com.anupcowkur:reservoir:2.1'
-
     // other
     compile 'com.github.orhanobut:logger:1.12'
-
 }
